# yadro_task

./: CMakeLists.txt  main.cpp  readme.txt
tests/: CMakeLists.txt  Time.cpp  Time.h  test_time.cpp
